syntax = "proto3";
package testproto;

option go_package = "github.com/obeattie/protoparts/internal/testproto;testproto";

message LatLng {
     double latitude = 1;
     double longitude = 2;
 }

 message Address {
     string street_address = 1;
     string city = 2;
     LatLng lat_lng = 3;
 }

 message Person {
     enum MaritalStatus {
         PREFER_NOT_TO_SAY = 0;
         SINGLE = 1;
         DIVORCED = 2;
         WIDOWED = 3;
     }

     optional string name = 1;
     Address address = 2;
     repeated Address moar_addresses = 3;
     repeated string tags = 4;
     repeated bytes boop = 5;
     map<string, LatLng> map_string_latlng = 6;
     MaritalStatus marital_status = 7;
     oneof string_or_latlng {
         string maybe_string = 8;
         LatLng maybe_latlng = 9;
     }
     map<string, string> map_string_string = 10;
 }
